kubernetes-manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dependency-tracker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependency-tracker
  namespace: dependency-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dependency-tracker
  template:
    metadata:
      labels:
        app: dependency-tracker
    spec:
      serviceAccountName: dependency-tracker
      containers:
      - name: dependency-tracker
        image: ghcr.io/vrabbi/k8s-dependency-tracker:0.1.0
        #        command: ['/app/k8s-dependency-tracker']
        #        args: ["--insecure"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dependency-tracker
  namespace: dependency-tracker
spec:
  selector:
    app: dependency-tracker
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dependency-tracker
  namespace: dependency-tracker
spec:
  ingressClassName: contour
  rules:
  - host: dependency-tracker.kubetopus.terasky.lab
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dependency-tracker
            port:
              number: 8080
